--- a/szar.html
+++ b/szar.html
@@ -8,7 +8,7 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<input type="text" list="colors" id="asd">
+<input type="text" list="colors" id="qwer">
 <datalist id="colors">
     <option value="red">
     <option value="blue">
@@ -19,7 +19,7 @@
 <button onclick="change()">change</button>
 <script>
     function change() {
-        $('body').css("background-color", $("#asd").val())
+        $('body').css("background-color", $("#qwer").val())
     }
 </script>
 </body>
